// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Messaging/AdaptiveCard Card 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "items": [
                {
                    "type": "Image",
                    "style": "Person",
                    "url": "https://developer.webex.com/images/webex-teams-logo.png",
                    "size": "Medium",
                    "height": "50px"
                }
            ],
            "width": "auto"
        },
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Cisco Webex Teams",
                    "weight": "Lighter",
                    "color": "Accent"
                },
                {
                    "type": "TextBlock",
                    "weight": "Bolder",
                    "text": "Buttons and Cards Release",
                    "horizontalAlignment": "Left",
                    "wrap": true,
                    "color": "Light",
                    "size": "Large",
                    "spacing": "Small"
                }
            ],
            "width": "stretch"
        }
    ]
}
      </pre>
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "width": 35,
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Release Date:",
                    "color": "Light"
                },
                {
                    "type": "TextBlock",
                    "text": "Product:",
                    "weight": "Lighter",
                    "color": "Light",
                    "spacing": "Small"
                },
                {
                    "type": "TextBlock",
                    "text": "OS:",
                    "weight": "Lighter",
                    "color": "Light",
                    "spacing": "Small"
                }
            ]
        },
        {
            "type": "Column",
            "width": 65,
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Aug 6, 2019",
                    "color": "Light"
                },
                {
                    "type": "TextBlock",
                    "text": "Webex Teams",
                    "color": "Light",
                    "weight": "Lighter",
                    "spacing": "Small"
                },
                {
                    "type": "TextBlock",
                    "text": "Mac, Windows, Web",
                    "weight": "Lighter",
                    "color": "Light",
                    "spacing": "Small"
                }
            ]
        }
    ],
    "spacing": "Padding",
    "horizontalAlignment": "Center"
}
      </pre>
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      We're making it easier for you to interact with bots and integrations in Webex Teams. When your bot sends information in a space that includes a card with buttons, you can now easily interact with it.
    </div>
    <div
      className="wxc-text-block "
    >
      Buttons and Cards Resources:
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "width": "auto",
            "items": [
                {
                    "type": "Image",
                    "altText": "",
                    "url": "https://developer.webex.com/images/link-icon.png",
                    "size": "Small",
                    "width": "30px"
                }
            ],
            "spacing": "Small"
        },
        {
            "type": "Column",
            "width": "auto",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "[Developer Portal Buttons and Cards Guide]()",
                    "horizontalAlignment": "Left",
                    "size": "Medium"
                }
            ],
            "verticalContentAlignment": "Center",
            "horizontalAlignment": "Left",
            "spacing": "Small"
        }
    ]
}
      </pre>
    </div>
    <div>
      <h5>
        ActionSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ActionSet",
    "actions": [
        {
            "type": "Action.Submit",
            "title": "Subscribe to Release Notes",
            "data": {
                "subscribe": true
            }
        }
    ],
    "horizontalAlignment": "Left",
    "spacing": "None"
}
      </pre>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Column 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 1"
                },
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/cats/1.png"
                }
            ]
        },
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 2"
                },
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/cats/1.png"
                }
            ]
        },
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 3"
                },
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/cats/1.png"
                }
            ]
        }
    ]
}
      </pre>
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": "https://adaptivecards.io/content/AlkiBeach.jpg",
            "width": "auto"
        },
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": {
                "url": "https://adaptivecards.io/content/GoldenGardensPark.jpg",
                "verticalAlignment": "Center"
            },
            "width": "stretch"
        },
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": "https://adaptivecards.io/content/BainbridgeIsland.jpg",
            "width": "auto"
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block "
    >
      You can even repeat the background image...
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": {
                "url": "https://adaptivecards.io/content/uparrow.png",
                "fillMode": "Repeat"
            },
            "width": "stretch"
        },
        {
            "type": "Column",
            "horizontalAlignment": "Center",
            "verticalContentAlignment": "Center",
            "items": [
                {
                    "type": "TextBlock",
                    "horizontalAlignment": "Center",
                    "text": "Those are some neat arrows",
                    "wrap": true
                }
            ],
            "width": "stretch"
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block "
    >
      Horizontal repeat...
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": {
                "url": "https://adaptivecards.io/content/downarrow.png",
                "fillMode": "RepeatHorizontally"
            },
            "width": "stretch"
        },
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": {
                "url": "https://adaptivecards.io/content/uparrow.png",
                "fillMode": "RepeatHorizontally",
                "verticalAlignment": "Center"
            },
            "width": "stretch"
        },
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": {
                "url": "https://adaptivecards.io/content/uparrow.png",
                "fillMode": "RepeatHorizontally",
                "verticalAlignment": "Bottom"
            },
            "width": "stretch"
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block "
    >
      Vertical repeat...
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": {
                "url": "https://adaptivecards.io/content/uparrow.png",
                "fillMode": "RepeatVertically"
            },
            "width": "stretch"
        },
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": {
                "url": "https://adaptivecards.io/content/downarrow.png",
                "fillMode": "RepeatVertically",
                "horizontalAlignment": "Center"
            },
            "width": "stretch"
        },
        {
            "type": "Column",
            "minHeight": "50px",
            "backgroundImage": {
                "url": "https://adaptivecards.io/content/uparrow.png",
                "fillMode": "RepeatVertically",
                "horizontalAlignment": "Right"
            },
            "width": "stretch"
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block "
    >
      Bleed left
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "style": "emphasis",
    "columns": [
        {
            "type": "Column",
            "style": "good",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 1"
                }
            ],
            "bleed": true,
            "width": "stretch"
        },
        {
            "type": "Column",
            "style": "attention",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 2"
                }
            ],
            "width": "stretch"
        },
        {
            "type": "Column",
            "style": "warning",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 3"
                }
            ],
            "width": "stretch"
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block "
    >
      Bleed center
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "style": "emphasis",
    "columns": [
        {
            "type": "Column",
            "style": "good",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 1"
                }
            ],
            "width": "stretch"
        },
        {
            "type": "Column",
            "style": "attention",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 2"
                }
            ],
            "bleed": true,
            "width": "stretch"
        },
        {
            "type": "Column",
            "style": "warning",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 3"
                }
            ],
            "width": "stretch"
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block "
    >
      Bleed right
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "style": "emphasis",
    "columns": [
        {
            "type": "Column",
            "style": "good",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 1"
                }
            ],
            "width": "stretch"
        },
        {
            "type": "Column",
            "style": "attention",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 2"
                }
            ],
            "width": "stretch"
        },
        {
            "type": "Column",
            "style": "warning",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 3"
                }
            ],
            "bleed": true,
            "width": "stretch"
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block "
    >
      Bleed all
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "style": "emphasis",
    "columns": [
        {
            "type": "Column",
            "style": "good",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 1"
                }
            ],
            "bleed": true,
            "width": "stretch"
        },
        {
            "type": "Column",
            "style": "attention",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 2"
                }
            ],
            "bleed": true,
            "width": "stretch"
        },
        {
            "type": "Column",
            "style": "warning",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 3"
                }
            ],
            "bleed": true,
            "width": "stretch"
        }
    ]
}
      </pre>
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "items": [
                {
                    "type": "Graph"
                }
            ],
            "fallback": {
                "type": "Column",
                "items": [
                    {
                        "type": "TextBlock",
                        "text": "Fallback"
                    }
                ]
            },
            "width": "auto"
        },
        {
            "type": "Column",
            "items": [
                {
                    "type": "Graph"
                }
            ],
            "fallback": "drop"
        },
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "This is a column",
                    "wrap": true
                }
            ]
        }
    ]
}
      </pre>
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "style": "emphasis",
    "minHeight": "100px",
    "columns": [
        {
            "type": "Column",
            "style": "default",
            "minHeight": "200px",
            "items": [
                {
                    "type": "TextBlock",
                    "wrap": true,
                    "text": "The columnset has a minHeight of 100px while this column has a minHeight of 200px so it should override"
                }
            ]
        },
        {
            "type": "Column",
            "style": "default",
            "minHeight": "50px",
            "items": [
                {
                    "type": "FactSet",
                    "facts": [
                        {
                            "title": "ColumnSet",
                            "value": "MinHeight: 100px"
                        },
                        {
                            "title": "Column 1",
                            "value": "MinHeight: 200px"
                        },
                        {
                            "title": "Column 2",
                            "value": "MinHeight: 50px"
                        }
                    ]
                }
            ]
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true wxc-text-block__size--Medium"
    >
      The middle column is set to rtl
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column One",
                    "wrap": true
                }
            ]
        },
        {
            "type": "Column",
            "rtl": true,
            "items": [
                {
                    "type": "TextBlock",
                    "text": "العمود الثاني",
                    "wrap": true
                }
            ]
        },
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "wrap": true,
                    "text": "Column three"
                }
            ]
        }
    ],
    "spacing": "Medium"
}
      </pre>
    </div>
    <div
      className="wxc-container"
    >
      <div>
        <h5>
          ColumnSet Component
        </h5>
        <pre
          className="wxc-adaptive-cards-unknown-component"
        >
          {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "width": "auto",
            "items": [
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/cats/3.png",
                    "size": "medium"
                },
                {
                    "type": "TextBlock",
                    "text": "SHADES",
                    "horizontalAlignment": "center",
                    "weight": "bolder"
                }
            ]
        },
        {
            "type": "Column",
            "width": "stretch",
            "separator": true,
            "spacing": "medium",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Dec 4",
                    "horizontalAlignment": "center"
                },
                {
                    "type": "TextBlock",
                    "text": "Final",
                    "spacing": "none",
                    "horizontalAlignment": "center"
                },
                {
                    "type": "TextBlock",
                    "text": "7 - 40",
                    "size": "extraLarge",
                    "horizontalAlignment": "center"
                }
            ]
        },
        {
            "type": "Column",
            "width": "auto",
            "separator": true,
            "spacing": "medium",
            "items": [
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/cats/2.png",
                    "size": "medium",
                    "horizontalAlignment": "center"
                },
                {
                    "type": "TextBlock",
                    "text": "SKINS",
                    "horizontalAlignment": "center",
                    "weight": "bolder"
                }
            ]
        }
    ]
}
        </pre>
      </div>
    </div>
    <div
      className="wxc-text-block wxc-text-block__weight--bolder"
    >
      Try clicking a column!
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 1"
                },
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/cats/1.png"
                }
            ],
            "selectAction": {
                "type": "Action.OpenUrl",
                "tooltip": "cool link",
                "url": "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
            }
        },
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 2"
                },
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/cats/1.png"
                }
            ],
            "selectAction": {
                "type": "Action.OpenUrl",
                "tooltip": "cool link",
                "url": "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
            }
        },
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 3"
                },
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/cats/1.png"
                }
            ],
            "selectAction": {
                "type": "Action.OpenUrl",
                "tooltip": "cool link",
                "url": "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
            }
        }
    ]
}
      </pre>
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "No Style"
                }
            ]
        },
        {
            "type": "Column",
            "style": "default",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Default Style"
                }
            ]
        },
        {
            "type": "Column",
            "style": "emphasis",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Emphasis Style"
                },
                {
                    "type": "Container",
                    "items": [
                        {
                            "type": "TextBlock",
                            "text": "Container no style"
                        }
                    ]
                },
                {
                    "type": "Container",
                    "style": "default",
                    "items": [
                        {
                            "type": "TextBlock",
                            "text": "Container default style"
                        }
                    ]
                },
                {
                    "type": "Container",
                    "style": "emphasis",
                    "items": [
                        {
                            "type": "TextBlock",
                            "text": "Container emphasis style"
                        }
                    ]
                }
            ]
        }
    ]
}
      </pre>
    </div>
    <div
      className="wxc-text-block "
    >
      Hi,
    </div>
    <div
      className="wxc-text-block "
    >
      MasterHip
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "height": "stretch",
    "columns": [
        {
            "type": "Column",
            "verticalContentAlignment": "bottom",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "Column 1"
                }
            ]
        }
    ]
}
      </pre>
    </div>
    <div>
      <h5>
        ColumnSet Component
      </h5>
      <pre
        className="wxc-adaptive-cards-unknown-component"
      >
        {
    "type": "ColumnSet",
    "columns": [
        {
            "type": "Column",
            "width": "auto",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "(auto)"
                },
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/adaptive-card-50.png"
                }
            ]
        },
        {
            "type": "Column",
            "width": "stretch",
            "items": [
                {
                    "type": "TextBlock",
                    "horizontalAlignment": "center",
                    "text": "(stretch)"
                },
                {
                    "type": "Image",
                    "horizontalAlignment": "center",
                    "url": "https://adaptivecards.io/content/adaptive-card-50.png"
                }
            ]
        },
        {
            "type": "Column",
            "width": "auto",
            "items": [
                {
                    "type": "TextBlock",
                    "text": "(auto)"
                },
                {
                    "type": "Image",
                    "url": "https://adaptivecards.io/content/adaptive-card-50.png"
                }
            ]
        }
    ]
}
      </pre>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Container 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-container"
    >
      <div
        className="wxc-text-block "
      >
        This is some text
      </div>
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--large"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
    </div>
    <div
      className="wxc-container wxc-container__style--default"
    >
      <div
        className="wxc-text-block "
      >
        This container has the default style
      </div>
      <div
        className="wxc-text-block "
      >
        color: default
      </div>
      <div
        className="wxc-text-block "
      >
        color: accent
      </div>
      <div
        className="wxc-text-block "
      >
        color: good
      </div>
      <div
        className="wxc-text-block "
      >
        color: warning
      </div>
      <div
        className="wxc-text-block "
      >
        color: attention
      </div>
      <div
        className="wxc-text-block "
      >
        color: light
      </div>
      <div
        className="wxc-text-block "
      >
        color: dark
      </div>
    </div>
    <div
      className="wxc-container wxc-container__style--accent"
    >
      <div
        className="wxc-text-block "
      >
        This container has the accent style
      </div>
      <div
        className="wxc-text-block "
      >
        color: default
      </div>
      <div
        className="wxc-text-block "
      >
        color: accent
      </div>
      <div
        className="wxc-text-block "
      >
        color: good
      </div>
      <div
        className="wxc-text-block "
      >
        color: warning
      </div>
      <div
        className="wxc-text-block "
      >
        color: attention
      </div>
      <div
        className="wxc-text-block "
      >
        color: light
      </div>
      <div
        className="wxc-text-block "
      >
        color: dark
      </div>
      <div
        className="wxc-container"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - no style
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--emphasis"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - emphasis
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--default"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - default
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--good"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - good
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--warning"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - warning
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--attention"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - attention
        </div>
      </div>
      <div
        className="wxc-container wxc-container__style--accent"
      >
        <div
          className="wxc-text-block "
        >
          Contained container - accent
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Image 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <img
      className="wxc-adaptive-cards-image wxc-adaptive-cards-image__style--person wxc-adaptive-cards-image__size--medium"
      src="https://adaptivecards.io/content/cats/1.png"
      style={
        Object {
          "backgroundColor": "blue",
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--small"
      src="https://adaptivecards.io/content/cats/1.png"
      style={
        Object {
          "backgroundColor": undefined,
          "height": "60px",
          "width": "60px",
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--large"
      src="https://adaptivecards.io/content/cats/2.png"
      style={
        Object {
          "backgroundColor": "#cdcdcd",
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <img
      className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
      src="https://adaptivecards.io/content/cats/3.png"
      style={
        Object {
          "backgroundColor": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Image Set 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-adaptive-cards-image-set"
    >
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__style--person wxc-adaptive-cards-image__size--large"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": "red",
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
        src="https://adaptivecards.io/content/cats/3.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--small"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
        src="https://adaptivecards.io/content/cats/1.png"
        style={
          Object {
            "backgroundColor": "#cdcdcd",
            "height": "60px",
            "width": "60px",
          }
        }
      />
      <img
        className="wxc-adaptive-cards-image wxc-adaptive-cards-image__size--medium"
        src="https://adaptivecards.io/content/cats/2.png"
        style={
          Object {
            "backgroundColor": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/AdaptiveCard Text Block 1`] = `
Array [
  <div
    className="wxc-adaptive-card"
  >
    <div
      className="wxc-text-block "
    >
      color: default
    </div>
    <div
      className="wxc-text-block "
    >
      color: accent
    </div>
    <div
      className="wxc-text-block "
    >
      color: good
    </div>
    <div
      className="wxc-text-block "
    >
      color: warning
    </div>
    <div
      className="wxc-text-block "
    >
      color: attention
    </div>
    <div
      className="wxc-text-block "
    >
      color: light
    </div>
    <div
      className="wxc-text-block "
    >
      color: dark
    </div>
    <div
      className="wxc-text-block "
    >
      Font type not set.
    </div>
    <div
      className="wxc-text-block wxc-text-block__fontType--default"
    >
      Font type set to *default*.
    </div>
    <div
      className="wxc-text-block wxc-text-block__fontType--monospace"
    >
      Font type set to *monospace*.
    </div>
    <div
      className="wxc-text-block wxc-text-block__horizontalAlignment--left"
    >
      **horizontalAlignment:left**
    </div>
    <div
      className="wxc-text-block wxc-text-block__horizontalAlignment--center"
    >
      **horizontalAlignment:center**
    </div>
    <div
      className="wxc-text-block wxc-text-block__horizontalAlignment--right"
    >
      **horizontalAlignment:right**
    </div>
    <div
      className="wxc-text-block "
    >
      isSubtle:false
    </div>
    <div
      className="wxc-text-block "
    >
      isSubtle:true
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-text-block "
    >
      size:default
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--small"
    >
      size:small
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--default"
    >
      size:default
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--medium"
    >
      size:medium
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--large"
    >
      size:large
    </div>
    <div
      className="wxc-text-block wxc-text-block__size--extraLarge"
    >
      size:extraLarge
    </div>
    <div
      className="wxc-text-block wxc-text-block__weight--lighter"
    >
      weight: lighter
    </div>
    <div
      className="wxc-text-block wxc-text-block__weight--default"
    >
      weight: default
    </div>
    <div
      className="wxc-text-block wxc-text-block__weight--bolder"
    >
      weight: bolder
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--false"
    >
      **wrap: false** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      **wrap: true** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
    <div
      className="wxc-text-block wxc-text-block__style--heading wxc-text-block__wrap--true"
      role="heading"
    >
      Style set to heading
    </div>
    <div
      className="wxc-text-block wxc-text-block__style--heading wxc-text-block__wrap--true"
      role="heading"
    >
      Style set to heading, color set to good
    </div>
    <div
      className="wxc-text-block wxc-text-block__style--default wxc-text-block__wrap--true"
    >
      Style set to default
    </div>
    <div
      className="wxc-text-block wxc-text-block__wrap--true"
    >
      Style unset
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
